cluster-config/api/components.yaml
---
# Source: roman-coin-analyzer/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rome
  labels:
    istio.io/rev: asm-1-24
---
# Source: roman-coin-analyzer/templates/orchestrator.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: "guinea-22015-orchestrator-svc"
  namespace: rome
spec:
  selector:
    app: guinea-22015 
    name: orchestrator
  ports:
  - port: 80
    targetPort: 8004
    name: web
  - port: 9090
    targetPort: 9090
    name: metrics    
  type: ClusterIP
---
# Source: roman-coin-analyzer/templates/remus.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: "guinea-22015-remus-svc"
  namespace: rome
spec:
  selector:
    app: guinea-22015 
    name: remus
  ports:
  - port: 80
    targetPort: 8002
    name: web
  - port: 9090
    targetPort: 9090
    name: metrics    
  type: ClusterIP
---
# Source: roman-coin-analyzer/templates/romulus.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: "guinea-22015-romulus-svc"
  namespace: rome
spec:
  selector:
    app: guinea-22015 
    name: romulus
  ports:
  - port: 80
    targetPort: 8001
    name: web
  - port: 9090
    targetPort: 9090
    name: metrics    
  type: ClusterIP
---
# Source: roman-coin-analyzer/templates/orchestrator.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guinea-22015-orchestrator
  namespace: rome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guinea-22015 
      name: orchestrator
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: guinea-22015 
        name: orchestrator
        azure.workload.identity/use: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
        dapr.io/enabled: "true"
        dapr.io/config: "guinea-22015-config"
        dapr.io/app-id: "guinea-22015-orchestrator"
        dapr.io/app-port: "8004"
        dapr.io/log-level: "info"
        dapr.io/http-max-request-size: "512"                
    spec:
      serviceAccountName: guinea-22015-app-identity
      containers:
      - name: orchestrator
        image:  guinea22015acr.azurecr.io/rome/guinea-22015-orchestrator:791f7aee 
        imagePullPolicy: Always
        ports:
        - containerPort: 8004
        - containerPort: 9090
        resources:
          limits:
            memory: "512Mi"
            cpu: "2"
          requests:
            memory: "128Mi"
            cpu: "0.5"
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/mnt/secrets-store"                       
            readOnly: true  
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: openaiapikey
---
# Source: roman-coin-analyzer/templates/remus.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guinea-22015-remus
  namespace: rome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guinea-22015 
      name: remus
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: guinea-22015 
        name: remus
        azure.workload.identity/use: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
        dapr.io/enabled: "true"
        dapr.io/config: "guinea-22015-config"
        dapr.io/app-id: "guinea-22015-remus"
        dapr.io/app-port: "8002"
        dapr.io/log-level: "info"
        dapr.io/http-max-request-size: "512"                
    spec:
      serviceAccountName: guinea-22015-app-identity
      containers:
      - name: remus
        image:  guinea22015acr.azurecr.io/rome/guinea-22015-remus:791f7aee 
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
        - containerPort: 9090
        resources:
          limits:
            memory: "512Mi"
            cpu: "2"
          requests:
            memory: "128Mi"
            cpu: "0.5"
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/mnt/secrets-store"                       
            readOnly: true  
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: openaiapikey
---
# Source: roman-coin-analyzer/templates/romulus.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guinea-22015-romulus
  namespace: rome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guinea-22015 
      name: romulus
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: guinea-22015 
        name: romulus
        azure.workload.identity/use: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
        dapr.io/enabled: "true"
        dapr.io/config: "guinea-22015-config"
        dapr.io/app-id: "guinea-22015-romulus"
        dapr.io/app-port: "8001"
        dapr.io/log-level: "info"
        dapr.io/http-max-request-size: "512"                
    spec:
      serviceAccountName: guinea-22015-app-identity
      containers:
      - name: romulus
        image:  guinea22015acr.azurecr.io/rome/guinea-22015-romulus:791f7aee 
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
        - containerPort: 9090
        resources:
          limits:
            memory: "512Mi"
            cpu: "2"
          requests:
            memory: "128Mi"
            cpu: "0.5"
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/mnt/secrets-store"                       
            readOnly: true  
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: openaiapikey
---
# Source: roman-coin-analyzer/templates/orchestrator.deployment.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name:  guinea-22015-orchestrator-vs
  namespace: rome
spec:
  hosts:
  -  "*"
  gateways:
  -  aks-istio-ingress/default-bjdazure-tech-gw
  http:
  - route:
    - destination:
        host: "guinea-22015-orchestrator-svc"
        port:
          number: 80
    corsPolicy:          
      allowMethods:
      - POST
      - PUT
      - GET
      - OPTIONS
      allowOrigins:
      - regex: 'https?://(?:[\w-]+\.)*(azurestaticapps\.net|azure-api\.net)(?:/[\w\-./?%&=]*)?'
      unmatchedPreflights: FORWARD
---
# Source: roman-coin-analyzer/templates/remus.deployment.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name:  "guinea-22015-remus-vs"
  namespace: rome
spec:
  hosts:
  -  "*"
  gateways:
  -  aks-istio-ingress/default-bjdazure-tech-gw
  http:
  - route:
    - destination:
        host: "guinea-22015-remus-svc"
        port:
          number: 80
    corsPolicy:          
      allowMethods:
      - POST
      - PUT
      - GET
      - OPTIONS
      allowOrigins:
      - regex: 'https?://(?:[\w-]+\.)*(azurestaticapps\.net|azure-api\.net)(?:/[\w\-./?%&=]*)?'
      unmatchedPreflights: FORWARD
---
# Source: roman-coin-analyzer/templates/romulus.deployment.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name:  "guinea-22015-romulus-vs"
  namespace: rome
spec:
  hosts:
  -  "*"
  gateways:
  -  aks-istio-ingress/default-bjdazure-tech-gw
  http:
  - route:
    - destination:
        host: "guinea-22015-romulus-svc"
        port:
          number: 80
    corsPolicy:          
      allowMethods:
      - POST
      - PUT
      - GET
      - OPTIONS
      allowOrigins:
      - regex: 'https?://(?:[\w-]+\.)*(azurestaticapps\.net|azure-api\.net)(?:/[\w\-./?%&=]*)?'
      unmatchedPreflights: FORWARD
